# tasksentinel

./: .gitignore  LICENSE  README.md  pyproject.toml  test_consume.py
tasksentinel/: cli.py  diff.py  monitor.py  proc.py  snapshot.py
tests/: test_proc.py
